--- a/public/src/styles/globals.scss
+++ b/public/src/styles/globals.scss
@@ -10,3 +10,12 @@ body {
 .card {
   border-radius: $border-radius;
 }
+
+.avatar {
+  width: 75px;
+  height: 75px;
+}
+
+.img-circle {
+  border-radius: 50%;
+}
